mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_class_without_new.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot call non-function type
--> test_scripts/error_cases/semantic_class_without_new.mux:5:10
   |
 5 | auto f = Foo()
   |          ^^^
   |
= help: Only functions can be called with '()'. Ensure the expression before '()' is a function.
